<resources>
    <string name="app_name">MA 02 MIBU</string>
    <string name="Products">Products</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>

    <string name="filters">Filters</string>
    <string name="fav">Event</string>
    <string-array name="event_types_array">
        <item>Party</item>
        <item>Lecture</item>
        <item>Other</item>
    </string-array>

    <string name="product">Product</string>
    <string name="service">Service</string>
    <string name="bundle">Bundle</string>
    <string name="searchby">Search by:</string>
    <string name="filvals">Filters:</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="price">Price</string>
    <string name="date">Date</string>

    <string name="sugcat">Suggested categories:</string>
    <string name="sugsubcat">Suggested subcategories:</string>
    <string name="suggestions">Suggestions:</string>

    <!-- Authentication strings -->
    <string name="login" translatable="false">Login</string>
    <string name="signUpOD" translatable="false">Sign up OD</string>
    <string name="signUpPUP" translatable="false">Sign up PUP</string>
    <string name="selectImage" translatable="false">Select Image</string>

    <!-- Personal info authentication  -->
    <string name="personalInfoInput" translatable="false">Enter your personal information</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="repeatPassword" translatable="false">Repeat password</string>
    <string name="name" translatable="false">Name</string>
    <string name="surname" translatable="false">Surname</string>
    <string name="phoneNumber" translatable="false">Phone number</string>
    <string name="addressOfResidence" translatable="false">Address of residence</string>

    <!-- Company info authentication -->
    <string name="companyInfoInput" translatable="false">Enter company information</string>
    <string name="companyName" translatable="false">Company name</string>
    <string name="companyEmail" translatable="false">Company email</string>
    <string name="companyAddress" translatable="false">Company address</string>
    <string name="companyPhoneNumber" translatable="false">Company phone number</string>
    <string name="companyDescription" translatable="false">Company description</string>
    <string name="companyWorkingHours" translatable="false">Company working hours</string>

    <!-- General authentication strings -->
    <string name="next" translatable="false">Next</string>

    <!-- Category management -->
    <string name="saveCategory" translatable="false">Save category</string>
    <string name="deleteCategory" translatable="false">Delete category</string>
    <string name="saveSubcategory" translatable="false">Save subcategory</string>
    <string name="deleteSubcategory" translatable="false">Delete subcategory</string>
    <string name="rejectSubcategoryRequest" translatable="false">Reject request</string>
    <string name="acceptSubcategoryRequest" translatable="false">Accept request</string>
    <string name="acceptSuggestedSubcategory" translatable="false">Accept suggestion</string>

    <string name="search_products">Search products</string>
    <string name="search_services">Search services</string>
    <string name="product_name">Product name: </string>
    <string name="service_name">Service name: </string>
    <string name="description">Description:  </string>
    <string name="min_price">Min price:  </string>
    <string name="max_price">Max price:  </string>

    <string name="sub_category">Sub-category:  </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>