<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"

    >

    <RelativeLayout
        android:layout_width="361dp"
        android:layout_height="50dp"
        android:layout_margin="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/filters"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset_search_service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Reset" />

            <Button
                android:id="@+id/search_button_service"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Search" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="2dp"
            android:background="@color/black" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="2dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchby"/>

        <Spinner
            android:id="@+id/spinner_event_typeX"

            android:layout_width="207dp"
            android:layout_height="52dp"
            android:layout_marginTop="36dp"
            android:gravity="center" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:text="@string/product" />

            <RadioButton
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="@string/service" />

            <RadioButton
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/bundle" />
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"
            android:layout_margin="2dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filvals"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:hint="@string/location"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/type"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:hint="@string/category"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:hint="@string/subcategory"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:hint="@string/price"
            android:inputType="number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:hint="@string/date"
            android:inputType="date" />




    </LinearLayout>


</LinearLayout>